Wed May 15 16:58:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: save configured load path values into verconf.in.

	* common.mk (verconf.h): create from verconf.in with shvar_to_cpp.rb.

	* tool/shvar_to_cpp.rb: turn shell variables into C macros.
	  [Bug #7959]

	* loadpath.c: split load path staffs from version.c.

	* dmyloadpath.c: miniruby has no builtin load paths, so verconf.h is
	  not needed.

Wed May 15 03:56:09 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: adding backwards
	  compatible YAMLTree.new method

Wed May 15 02:22:16 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: Adding Psych.safe_load for loading a user
	  defined, restricted subset of Ruby object types.
	* ext/psych/lib/psych/class_loader.rb: A class loader for
	  encapsulating the logic for which objects are allowed to be
	  deserialized.
	* ext/psych/lib/psych/deprecated.rb: Changes to use the class loader
	* ext/psych/lib/psych/exception.rb: ditto
	* ext/psych/lib/psych/json/stream.rb: ditto
	* ext/psych/lib/psych/nodes/node.rb: ditto
	* ext/psych/lib/psych/scalar_scanner.rb: ditto
	* ext/psych/lib/psych/stream.rb: ditto
	* ext/psych/lib/psych/streaming.rb: ditto
	* ext/psych/lib/psych/visitors/json_tree.rb: ditto
	* ext/psych/lib/psych/visitors/to_ruby.rb: ditto
	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto
	* ext/psych/psych_to_ruby.c: ditto
	* test/psych/helper.rb: ditto
	* test/psych/test_safe_load.rb: tests for restricted subset.
	* test/psych/test_scalar_scanner.rb: ditto
	* test/psych/visitors/test_to_ruby.rb: ditto
	* test/psych/visitors/test_yaml_tree.rb: ditto

Wed May 15 02:06:35 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* test/psych/helper.rb: envutil is not available outside Ruby, so
	  port the functions from envutil to the test helper.

	* test/psych/test_deprecated.rb: ditto

	* test/psych/test_encoding.rb: ditto
