@@ -1,3 +1,10 @@
+Wed May 15 17:04:11 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c: add an additional RGENGC_PROFILE mode (2).
+	  Profiling result can be check by GC.stat.
+
+	* gc.c (type_name): separate from obj_type_name().
+
 Wed May 15 16:58:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: save configured load path values into verconf.in.
